# kcp-fakeTCP

./: .gitignore  CMakeLists.txt  README.md  a-server.pcap
code/: fake_tcp.cc  kcp.cc  kcp.h  kcp_inc.cc  kcp_inc.h  model.cc  temp.h  temp_fake_tcp.cc
code/kcp/: client_fake_tcp.cc  client_fake_tcp.h  fake_tcp.cc  fake_tcp.h  ikcp.cc  kcp_client.cc  kcp_client.h  kcp_server.cc  kcp_server.h  kcp_socket.cc  kcp_socket.h  server_epoll.cc  server_epoll.h
stript/: run_multi_client.sh
tests/: a.cpp  b.cpp  fake_tcp_epoll.cc  kcp_client_temp.cc  server_epoll_fork.cc  test.cpp  test_client.cpp  test_fake_tcp.cc  test_kcp_a.cpp  test_kcp_b.cpp  test_kcp_client.cc  test_kcp_qps.cc  test_server.cpp  test_tcp_client.cc  test_tcp_server.cc
